small train, train sign  alignment and width fix on tablet resolution

--- a/src/components/SVG/Train/Train.scss
+++ b/src/components/SVG/Train/Train.scss
@@ -31,8 +31,9 @@ $breakpoint-splus: 601px;
     }
 
     @media (orientation: portrait) {
-      top: -19%;
+      top: -17%;
       left: -70%;
+      width: 80vw;
     }
   }
 
